syntax = "proto3";

package user.v1;

import "buf/validate/validate.proto";

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersReply) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserReply) {}
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
}

message ListUsersRequest {
}

message ListUsersReply {
  repeated User data = 1;
}

message CreateUserRequest {
  string email = 1 [(buf.validate.field).string.min_len = 1];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  string password = 3 [(buf.validate.field).string.min_len = 1];
}

message CreateUserReply {
  string message = 1;
}